# Spaceship-Crew-V2

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt
src/SpaceshipCrewV2_Dir/: CMakeLists.txt
src/models/: room.cpp  room.hpp  room_type.hpp
src/models/crew_member/: crew_member.cpp  crew_member.hpp
src/models/event/: engineering_event.hpp  event.hpp  medical_event.hpp
src/models/room/: room.cpp  room.hpp
src/models/room/types/: bridge.hpp  corridor.hpp  medbay.hpp  quarter.hpp  room_type.hpp
src/models/skill/: skill.hpp
src/models/space_ship/: space_ship.cpp  space_ship.hpp
src/qml/: CMakeLists.txt  main.qml
tests/: CMakeLists.txt  crew_member_test.cpp  room_test.cpp  skill_test.cpp  space_ship_test.cpp
tests/event/: engineering_event_test.cpp  medical_event_test.cpp
